# simple-sokoban-bevy

./: .gitignore  Cargo.toml  README.md  run_on_sim.sh
assets/maps/: map.txt
src/: cell.rs  game.rs  main.rs  movement.rs  player.rs  tileset.rs  utils.rs
