[package]
name = "forestry-rust"
version = "0.1.0"
edition = "2021"
description = "Forestry Rust"

[package.metadata.bundle]
identifier = "com.github.forestry-rust"
resources = [
    "assets"
]

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features = ["bevy_gltf", "bevy_winit", "bevy_asset", "bevy_animation", "bevy_audio", "render", "png"], default_features = false }